# dok-noord-arena

./: .gitignore  .matchmaking.txt  .watchmanconfig  Dok Noord.ipynb  README.md  data.xlsm  dispatch-debug.py  index.html.jinja  main.py  models.py  pyproject.toml  server-debug.py  tailwind.config.js  transform_data.py  watch
.github/workflows/: build.yml
.github/workflows/act/: build  repository_dispatch.json
data/: matches.csv  players.csv
docs/: .gitignore  ci_public_token  index.html
site/: .gitignore  index.html.jinja
