[project]
name = "doknoord-ai-ii"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "ipython>=9.0.2",
    "jinja2>=3.1.5",
    "pydantic>=2.10.6",
    "rich>=14.0.0",
]

[tool.setuptools.packages.find]
include = []
